# ScientificComputingToolbox

./: .gitignore  ButcherTableau.hpp  CMakeLists.txt  FunctionsArray.hpp  InfoColumn.hpp  Iterator.hpp  ML  ODE.hpp  ProcessData.hpp  README.md  RawData.hpp  RawDataCSV.hpp  RawDataJSON.hpp  StatisticalAnalyses.hpp  Type.hpp  example  graph.py  iris.json  iris_analyses  main.cpp  ode.txt  onlinefoods_analyses  output.txt
app/: main.cpp
apps/: CMakeLists.txt  analyse_file.cpp  resolve_ode.cpp
src/: CMakeLists.txt
src/ODE/include/: ButcherTableau.hpp  FunctionsArray.hpp  ODE.hpp
src/ODE/src/: ButcherTableau.cpp  FunctionsArray.cpp  ODE.cpp
src/StatisticalAnalyser/include/: DataAnalyser.hpp  Iterator.hpp  ProcessData.hpp  ProcessedData.hpp  RawData.hpp  RawDataCSV.hpp  RawDataJSON.hpp
src/StatisticalAnalyser/include/detail/: InfoColumn.hpp  Type.hpp
src/StatisticalAnalyser/src/: DataAnalyser.cpp  ProcessedData.cpp  RawData.cpp  RawDataCSV.cpp  RawDataJSON.cpp
